--- a/Scripts/Demo/UnityLocalization.Demo.asmdef
+++ b/Scripts/Demo/UnityLocalization.Demo.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "UnityLocalization.Runtime",
-    "rootNamespace": "UnityLocalization.Runtime",
+    "name": "UnityLocalization.Demo",
+    "rootNamespace": "UnityLocalization.Demo",
     "references": [
-        "GUID:86c5ae22b787083498226e9faa99731d",
-        "GUID:626cca1954403c942aaa892ce194af26",
-        "GUID:03e750fc17f6cff499337d89b1e613c8"
+        "GUID:8a232e415480fe145a36742decb082fd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
