--- a/Scripts/Runtime/UnityLocalization.Runtime.asmdef
+++ b/Scripts/Runtime/UnityLocalization.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:86c5ae22b787083498226e9faa99731d",
         "GUID:626cca1954403c942aaa892ce194af26",
-        "GUID:03e750fc17f6cff499337d89b1e613c8"
+        "GUID:03e750fc17f6cff499337d89b1e613c8",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -13,6 +14,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.textmeshpro",
+            "expression": "",
+            "define": "TEXT_MESH_PRO"
+        }
+    ],
     "noEngineReferences": false
 }
